--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
         <div class="social-links mt-3 text-center">
           <a href="https://www.linkedin.com/in/isma%C3%AFl-bouasria-45a8b018a" target="_blank" class="linkedin"><i
               class="bx bxl-linkedin"></i></a>
+              <a href="https://github.com/ismail-bouasria" target="_blank" class="github"><i
+                class="bx bxl-github"></i></a>
         </div>
+        
+    </div>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
@@ -334,9 +338,6 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
-      </div>
 
     </div>
   </footer><!-- End  Footer -->
