add name projet and description

--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About me</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i>
               <span>Projects</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -83,9 +82,8 @@
 
         <div class="section-title">
           <h2>About me </h2>
-          <p> Fort de trois ans d'expérience en tant que concepteur et développeur
-            d'application web & mobile.
-            je suis actuellement en quête d'un Master en IT & Business, avec une spécialisation en ingénierie du web. 
+          <p> Fort de trois ans d'expérience en tant que concepteur et développeur d'application web & mobile.
+            Je suis actuellement en Master en IT & Business ingénierie du web en alternance. 
             Mon parcours professionnel solide et mon désir d'acquérir des compétences avancées reflètent mon engagement envers l'excellence dans le domaine du développement web.
           </p>
         </div>
@@ -125,7 +123,8 @@
               passionné.
             </p>
 
-            <a class="btn btn-primary" href="/assets/pdf/CV-master.pdf" download="">Télécharger mon CV</a>
+            <a class="btn btn-primary" href="./assets/pdf/cv-master.pdf" download="">Télécharger mon CV</a>
+
           </div>
         </div>
 
@@ -165,15 +164,20 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-we bg-white">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/livre-d-or.png" class="img-fluid" alt="livre d'or">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
+            <div>
+              <br>
+            <p> <span class="fw-bold"> Projet : </span> Livre d'or </p>
+            <br>
+            <p> <span class="fw-bold"> Description: </span>  Inscription/ Connexion / Profil et zone commentaire réalisé en PHP/HTML/CSS </p>
+            </div>
+            
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-test">
